[gd_scene load_steps=4 format=2]

[ext_resource path="res://main.gd" type="Script" id=1]
[ext_resource path="res://micro_benchmarks_viewer.gd" type="Script" id=2]
[ext_resource path="res://scale_benchmark_viewer.tscn" type="PackedScene" id=3]

[node name="Node" type="Node"]
script = ExtResource( 1 )

[node name="Panel" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="TabContainer" type="TabContainer" parent="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 8.0
margin_top = 8.0
margin_right = -8.0
margin_bottom = -8.0

[node name="MicroBenchmarks" type="HSplitContainer" parent="Panel/TabContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0
script = ExtResource( 2 )

[node name="TestList" type="ItemList" parent="Panel/TabContainer/MicroBenchmarks"]
margin_right = 300.0
margin_bottom = 548.0
rect_min_size = Vector2( 300, 100 )

[node name="RightPane" type="Control" parent="Panel/TabContainer/MicroBenchmarks"]
margin_left = 312.0
margin_right = 1176.0
margin_bottom = 548.0

[node name="GraphArea" type="ColorRect" parent="Panel/TabContainer/MicroBenchmarks/RightPane"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = -32.0
rect_clip_content = true
color = Color( 0.0625, 0.0625, 0.0625, 1 )

[node name="GraphBottom" type="Control" parent="Panel/TabContainer/MicroBenchmarks/RightPane"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -28.0

[node name="ZoomSlider" type="HSlider" parent="Panel/TabContainer/MicroBenchmarks/RightPane/GraphBottom"]
anchor_bottom = 1.0
margin_right = 200.0
min_value = 1.0
max_value = 1500.0
step = 0.02
value = 20.0
exp_edit = true

[node name="ScaleBenchmarks" parent="Panel/TabContainer" instance=ExtResource( 3 )]
visible = false
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0

[node name="Loading" type="ColorRect" parent="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.525765 )

[node name="ProgressPanel" type="Panel" parent="Panel/Loading"]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = -22.0
margin_bottom = 20.0

[node name="ProgressBar" type="ProgressBar" parent="Panel/Loading/ProgressPanel"]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = 100.0
margin_top = -8.0
margin_right = -100.0
margin_bottom = 8.0
step = 1.0
[connection signal="item_selected" from="Panel/TabContainer/MicroBenchmarks/TestList" to="Panel/TabContainer/MicroBenchmarks" method="_on_TestList_item_selected"]
[connection signal="value_changed" from="Panel/TabContainer/MicroBenchmarks/RightPane/GraphBottom/ZoomSlider" to="Panel/TabContainer/MicroBenchmarks" method="_on_ZoomSlider_value_changed"]
